BUG: Popover task-trigger does not fit on the screen.
https://trello.com/c/jLTz3nrC

After correcting this bug, popover always fit in the screen.
I cleaned of the form to create tasks with redundant tags 'style'.

--- a/modules/tasks/tasks-bundle/src/main/resources/webapp/css/tasks.css
+++ b/modules/tasks/tasks-bundle/src/main/resources/webapp/css/tasks.css
@@ -585,7 +585,7 @@ editable-content .actionField.input-block-level span.badge {
 }
 
 .section-source .popover-title {
-    display: none;
+    display: block;
 }
 
 .section-source .popover {
@@ -626,6 +626,7 @@ h3.popover-title {
 .section-source .task-selector {
     float: left;
     list-style-type: none;
+    position: relative;
 }
 
 .task-bar {
@@ -763,6 +764,9 @@ h3.popover-title {
 
 span.pointer, .pointer {
     cursor: pointer;
+}
+.cursor-auto {
+    cursor: auto;
 }
 
 li.padding-botton6 {
